Use Integer.valueOf(n) instead of "new Integer(n)" in a few places.